--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
 sms_data.json
 smstrap
-node_modules
-build
 static
+
+# dependencies
+frontend/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+frontend/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
